[package]
name = "dgb"
version = "1.0.0"
edition = "2021"
description = "Tool zur Abdigitalisierung von Grundbuchblättern"
authors = ["Felix Schütt <Felix.Schuett@vlf-brandenburg.de>"]
license = "MIT"
build = "build.rs"
readme = "README.md"

[dependencies]
wry = { version = "0.16.2", features = ["devtools"] }
urlencoding = "1.0.0"
serde = "1" 
serde_derive = "1" 
itertools = "0.7.7"
lopdf = { version = "0.26.0", features = ["nom_parser"] }
flate2 = "*"
serde_json = "1"
base64 = "0.13"
regex = "1"
lazy_static = "1"
image = "0.23.14"
rayon = "1.5.1"
kuchiki = "0.8.1"
tinyfiledialogs = "3.8.3"
chrono = { version = "0.4.19", features = ["serde"] }
toml = "0.5"
dirs = "4.0"
num_cpus = "1.0"
printpdf = { version = "0.5.2", features = ["svg"] }
qrcode = "0.12.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
prettydiff = "0.6.1"
sequoia-openpgp = { version = "1.8.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression"] }
git2 = "0.14.4"
rand = "0.8.5"
hyphenation = { version = "0.8.4", features = ["embed_all", "nfc"] }
textwrap = { version = "0.15.0", features = ["smawk", "hyphenation"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
strip = true

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[package.metadata.deb]
maintainer = "Felix Schütt <Felix.Schuett@vlf-brandenburg.de>"
depends = "$auto, tesseract-ocr (>= 4.1.1), poppler-utils (>= 0.86.1), python3 (>=3.8.2), libpodofo-utils (>= 0.9.6), git (>= 2.25.1), qpdf (>= 9.1.1-1ubuntu0.1)"
section = "utility"
priority = "optional"
assets = [
    ["target/release/dgb", "usr/bin/", "755"],
    ["dgb.desktop", "usr/local/share/applications/", "755"],
    ["dgb.xpm", "usr/share/pixmaps/", "755"],
    ["README.md", "usr/local/share/doc/dgb/README", "644"],
]
